# sherlock

./: .gitignore  CMakeLists.txt  FindRE2C.cmake  LICENSE  README.md  lexer.re  preprocessor.re
include/: error.h  input.h  lexer.h  preprocessor.h  token_type.h  utils.h
src/: input.cpp  main.cpp  utils.cpp
